@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1190.2.7 2010-04-14 19:40:58 martin Exp $
+# $Id: CHANGES,v 1.1190.2.8 2010-04-15 19:50:07 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -232,6 +232,8 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.8 (2010/??/??)
+ - (2010/04/15) Fixed bug#5242 - Newlines not shown in html notification mails
+    on Lotus Notes
  - (2010/04/14) Fixed bug#4999 - Cache of customer user get's not refreshed after
     a preferences get's changed.
  - (2010/04/13) Fixed bug#5152 - responsible_user_id in ticket table is wrong in
